--- a/public/Sample.html
+++ b/public/Sample.html
@@ -163,7 +163,7 @@
         // alert(coorX);
         // alert(coorY);
         var mymap = L.map('mapid').setView([coorX,coorY
-        ], 13);
+        ], 15);
         L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
             maxZoom: 18,
             attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -172,6 +172,9 @@
             id: 'mapbox.streets'
         }).addTo(mymap);
         L.marker([coorX,coorY]).addTo(mymap);
+        L.marker([39.948273,-75.188842]).addTo(mymap);
+        L.marker([39.952081,-75.193638]).addTo(mymap);
+        L.marker([39.951513,-75.191481]).addTo(mymap);
         mymap.on('click', onMapClick);
 
         // L.marker([51.5,0.09]).addTo(mymap);
